[metadata]
name = fi-pye
version = 0.0.1
description = Python library for stock market data.
author = Justin Vannelli
author_email = jaymvannelli@gmail.com
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    requests>=2
    pandas>=1
python_version = >=3.6
zip_safe = no

[options.packages.find]
where=src
exclude=
    tests*